--- a/intelligent/index.html
+++ b/intelligent/index.html
@@ -6,12 +6,10 @@
 
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="products.css">
-
   <link rel="stylesheet" href="override.css">
 
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
 </head>
 <body>
 <header>
@@ -34,7 +32,72 @@
   <aside class="filter-box">
     <h2>Filters</h2>
     <div class="filters-container" id="filters-container">
-      <!-- Filters will be displayed here -->
+
+      <!-- Category Section -->
+      <div class="filter-section">
+        <h3>Category</h3>
+        <ul id="category-container">
+          <!-- Category filter options will be populated here -->
+        </ul>
+      </div>
+
+      <!-- Product Type Section -->
+      <div class="filter-section">
+        <h3>Product Type</h3>
+        <ul id="product-type-container">
+          <!-- Product type filter options will be populated here -->
+        </ul>
+      </div>
+
+      <!-- Colors Section -->
+      <div class="filter-section">
+        <h3>Colors</h3>
+        <ul id="colors-container">
+          <!-- Color filter options will be populated here -->
+        </ul>
+      </div>
+
+      <!-- Materials Section -->
+      <div class="filter-section">
+        <h3>Materials</h3>
+        <ul id="materials-container">
+          <!-- Material filter options will be populated here -->
+        </ul>
+      </div>
+
+      <!-- Brand Section -->
+      <div class="filter-section">
+        <h3>Brand</h3>
+        <ul id="brand-container">
+          <!-- Brand filter options will be populated here -->
+        </ul>
+      </div>
+
+      <!-- Styles Section -->
+      <div class="filter-section">
+        <h3>Styles</h3>
+        <ul id="styles-container">
+          <!-- Style filter options will be populated here -->
+        </ul>
+      </div>
+
+      <!-- Rating Section -->
+      <div class="filter-section">
+        <h3>Rating</h3>
+        <ul id="rating-container">
+          <!-- Rating filter options will be populated here -->
+        </ul>
+      </div>
+
+      <!-- Price Section -->
+      <div class="filter-section">
+        <h3>Price</h3>
+        <ul id="price-container">
+          <!-- Price filter options will be populated here -->
+        </ul>
+      </div>
+
+
     </div>
   </aside>
 
@@ -48,12 +111,9 @@
 
 <script src="lib.js"></script>
 <script src="storage.js"></script>
-
 <script src="index.js"></script> <!-- Linking the external JS file -->
 <script src="filter.js"></script>
 <script src="displayProducts.js"></script> <!-- Link to the new JS file -->
 <script src="sort.js"></script> <!-- Link to the new JS file -->
 </body>
 </html>
-
-
