--- a/index.html
+++ b/index.html
@@ -49,14 +49,6 @@
         </ul>
       </div>
 
-      <!-- Styles Section -->
-      <div class="filter-section">
-        <h3>Features</h3>
-        <ul id="features-container">
-          <!-- Style filter options will be populated here -->
-        </ul>
-      </div>
-
       <!-- Colors Section -->
       <div class="filter-section">
         <h3>Colors</h3>
@@ -78,6 +70,14 @@
         <h3>Brand</h3>
         <ul id="brand-container">
           <!-- Brand filter options will be populated here -->
+        </ul>
+      </div>
+
+      <!-- Styles Section -->
+      <div class="filter-section">
+        <h3>Styles</h3>
+        <ul id="styles-container">
+          <!-- Style filter options will be populated here -->
         </ul>
       </div>
 
